--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,6 +22,7 @@
     },
     "content_scripts": [{
         "matches": ["*://*/*", "file://*/*"],
+        "all_frames": true,
         "js": [
             "fg/js/api.js",
             "fg/js/popup.js",
